# SGM-simple

./: .gitignore  CMakeLists.txt
example/: simpleTest.cpp
include/: SemiGlobalMatching.h  sgmUtils.h
src/: SemiGlobalMatching.cpp  sgmUtils.cpp
